fix z-index issue with background-angles on landing pages

--- a/landing-pages/landing-pages.less
+++ b/landing-pages/landing-pages.less
@@ -120,6 +120,11 @@ section#symposium { background-image: url('/getmedia/b03015fc-cbe0-4634-b210-680
         &.@{color-class} .angle { fill: @color; }
     }
     .loop-colors(length(@color-classes));
+    
+    + .flex-row {
+        position: relative;
+        z-index: 1;
+    }
 }
 
 
